results completion time for JUC